add init to makefile

--- a/ec2/Makefile
+++ b/ec2/Makefile
@@ -1,7 +1,10 @@
 MAKEFLAGS += --silent
 
-plan:
+init:
+	terraform init
+
+plan: init
 	terraform plan -var-file="config.tfvars" -var-file="credentials.tfvars"
 
-apply:
+apply: init
 	terraform apply -var-file="config.tfvars" -var-file="credentials.tfvars"
